# mlir_basics

./: CMakeLists.txt  main.cpp
include/mltoy/: AST.h  Lexer.h  Parser.h
parser/: AST.cpp
